--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,10 @@
-// settings goes here 
+{
+  "liveSassCompile.settings.formats": [
+    {
+      "format": "expanded",
+      "extensionName": ".css",
+      "savePath": "./css"
+    }
+  ],
+  "liveServer.settings.port": 5501
+}
